# operadsFirstThings

./: .DocCode.hs.swp  2025-06-12-Note-09-41.xoj  DocCode.hs  Foo.hs  OpAlgs.hs  Operad.hs  README.md  ZaOperad.hs  code.tex  defsT04.aux  defsT04.fdb_latexmk  defsT04.fls  defsT04.tex  domble.tex  evComonad.aux  evComonad.fdb_latexmk  evComonad.fls  evComonad.tex  log250618.tex  log250619.aux  log250619.fdb_latexmk  log250619.fls  log250619.tex  log250624.aux  log250624.fdb_latexmk  log250624.fls  log250624.tex  log250627.tex  log250628.tex  log250711.aux  log250711.fdb_latexmk  log250711.fls  log250711.tex  log250712.aux  log250712.fdb_latexmk  log250712.fls  log250712.tex  log250713.aux  log250713.fdb_latexmk  log250713.fls  (+8 more)
drbrCoprod/: Coproduct.hs
milewski/: .ATicTacToe.hs.swp  ATicTacToe.hs  Comonad.hs  Foo.hs  GameBE.hs  (+9 more)
operadNotes/coproduct/fp202518-hw6/grading/medina/: CHANGELOG.md  d_ario.txt  medina.cabal  medina.gc
operadNotes/coproduct/fp202518-hw6/grading/medina/app/: Assignment6.hs  Main.hs
operadNotes/coproduct/fp202518-hw6/grading/medina/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
operadNotes/coproduct/fp202518-hw6/grading/medina/s_tudent_text/: odd.txt
operadNotes/coproduct/fp202518-hw6/sol_hw6/: CHANGELOG.md  barrero.error  sol-hw6.cabal
operadNotes/coproduct/fp202518-hw6/sol_hw6/app/: Main.hs  PermFile.hs  stuff.hs
operadNotes/coproduct/fp202518-hw6/sol_hw6/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+175 files in other folders)
