cabal-version:   3.14
name:            medina
version:         0.1.0.0
license:         NONE
author:          danielri1011101
maintainer:      barreroroserodr@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable medina
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.2.0
                    , random
    hs-source-dirs:   app
    default-language: Haskell2010
